--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager
+spring.datasource.username=root
+spring.datasource.password=123asdf123
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
